<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        />
    <ScrollView
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:id="@+id/scroll_view"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/note_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_details"
                android:layout_marginTop="@dimen/st_15_dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/fnt_notedetails_txtsz_tv"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/note_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_title"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/gothic"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/note_details_top_margin"
                android:textSize="@dimen/fnt_note_txtsz_tv"
                />

            <EditText
                android:id="@+id/note_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/st_15_dp"
                android:layout_marginTop="12dp"
                android:background="@android:color/transparent"
                android:hint="@string/type_t_here_hint"
                android:inputType="textMultiLine"
                android:textSize="@dimen/fnt_note_txtsz_et"
                android:gravity="center"
                tools:text="1234" />

            <TextView
                android:id="@+id/note_content_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gothic"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/st_30_dp"
                android:textSize="@dimen/fnt_note_txtsz_tv"
                />
            <EditText
                android:id="@+id/note_content_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/st_15_dp"
                android:textSize="@dimen/fnt_note_txtsz_et"
                android:hint="@string/type_c_here_hint"
                tools:text="1234"
                android:gravity="center"
                android:inputType="textMultiLine" />
            <TextView
                android:id="@+id/note_created_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_created"
                android:textColor="@color/black"
                android:fontFamily="@font/gothic"
                android:layout_marginStart="@dimen/st_15_dp"
                android:layout_marginTop="@dimen/st_30_dp"
                android:textSize="@dimen/fnt_note_txtsz_tv"
                />
            <TextView
                android:id="@+id/note_created_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/st_15_dp"
                android:layout_marginTop="@dimen/st_15_dp"
                android:textColor="@color/black"
                android:textSize="@dimen/fnt_note_txtsz_et"
                android:hint="@string/doesn_t_created_yet"
                />
            <TextView
                android:id="@+id/note_modified_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_modified"
                android:fontFamily="@font/gothic"
                android:layout_marginStart="@dimen/st_15_dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/st_30_dp"
                android:textSize="@dimen/fnt_note_txtsz_tv"
                />

            <TextView
                android:id="@+id/note_modified_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/st_15_dp"
                android:layout_marginTop="@dimen/st_15_dp"
                android:background="@android:color/transparent"
                android:textColor="@color/black"
                android:hint="@string/doesn_t_modified_yet"
                android:textSize="@dimen/fnt_note_txtsz_et" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/note_modified_title"
                android:layout_marginVertical="@dimen/st_30_dp"
                android:orientation="horizontal">
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel_b"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_size"
                    android:text="@string/cancel"
                    android:background="@drawable/buttons_back"
                    android:layout_marginHorizontal="@dimen/st_30_dp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/note_modified_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/agree_b"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_size"
                    android:text="@string/agree"
                    android:layout_marginHorizontal="@dimen/st_30_dp"
                    android:background="@drawable/buttons_back"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toBottomOf="@+id/note_modified_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>